@@ -1,3 +1,8 @@
+Thu May 24 06:35:56 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * XSC/be/CXX/Source.cpp:
+          Fixed conversion warnings
+
 Thu May 24 06:05:57 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * XSC.mwc:
